# artemis-light

./: .gitignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: docs.yml  test.yml
docs/adr/: 0001-persisted-subscribe-stays-inline.md  0002-dialect-seam-asymmetric-store-and-serving.md
docs/superpowers/plans/: 2026-06-11-collector-polling-fallback.md  2026-06-11-strategy-adapters.md  2026-06-12-action-deadline.md  2026-06-12-collector-fallback.md  2026-06-12-eip1559-stuck-tx.md  2026-06-12-execution-feedback.md  2026-06-12-persistence-reorg-depth.md
docs/superpowers/specs/: 2026-06-11-collector-polling-fallback-design.md  2026-06-11-strategy-adapters-design.md  2026-06-12-action-deadline-design.md  2026-06-12-collector-fallback-design.md  2026-06-12-eip1559-stuck-tx-design.md  2026-06-12-execution-feedback-design.md  2026-06-12-persistence-reorg-depth-design.md
examples/: README.md  adapters_example.rs  basic_example.rs  combinators_example.rs  confirmation_depth_example.rs  feedback_example.rs  liquidation_bot_example.rs  observer_example.rs  onchain_example.rs  persistence_example.rs  reconnect_example.rs  reliability_example.rs  serving_example.rs
src/: backoff.rs  collector_ext.rs  engine.rs  executor_ext.rs  lib.rs  strategy_ext.rs  types.rs
src/collector_ext/: chain.rs  fallback.rs  filter_map.rs  map.rs  merge.rs
src/collectors/: block_collector.rs  channel_collector.rs  event_collector.rs  fallback.rs  log_collector.rs  mempool_collector.rs  mod.rs
src/engine/: channel.rs  driver.rs  reconnect.rs
src/executor_ext/: circuit_breaker.rs  deadline.rs  fallback.rs  filter_map_action.rs  gated.rs  rate_limit.rs  report.rs  retry.rs  test_support.rs
src/executors/: mempool_executor.rs  mod.rs  pricing.rs
src/persistence/: dialect.rs  mod.rs  persisted.rs  postgres.rs  query.rs  record.rs  schema.rs  sql.rs  sqlite.rs  sqlstore.rs  store.rs
src/persistence/writer/: block.rs  mod.rs  window.rs
src/serving/: backend.rs  catalog.rs  error.rs  json.rs  mod.rs  pool.rs  routes.rs  rows.rs
src/strategy_ext/: cooldown.rs  filter_actions.rs  filter_map_event.rs  map_action.rs  test_support.rs
tests/: main.rs  persistence.rs  postgres.rs  serving.rs
