[package]
name = "artemis-light"
version = "0.1.0"
edition = "2024"
description = "A stripped-down, modernised fork of the Artemis MEV framework, built on Alloy and Tokio"
license = "Apache-2.0"
repository = "https://github.com/AndreasKoestler/artemis-light"
readme = "README.md"
keywords = ["mev", "ethereum", "alloy", "tokio", "web3"]
categories = ["asynchronous", "cryptography::cryptocurrencies"]

[dependencies]
## async
async-trait = "0.1"
futures = "0.3"
## The library itself needs only these; downstream binaries pick their own
## runtime flavour (`rt-multi-thread`, `signal`, ...).
tokio = { version = "1.44", features = ["rt", "sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ['sync'] }
tokio-util = "0.7"
alloy = { version = "1.0", features = ["full"] }
## persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
## misc
anyhow = "1.0.97"
tracing = "0.1.41"

[dev-dependencies]
## `test-util` enables `tokio::time::pause`/`start_paused` so the collector
## driver's backoff timing can be asserted on virtual time.
tokio = { version = "1.44", features = ["full", "test-util"] }
## `node-bindings` (Anvil process spawning) is test/example tooling only; it
## must not ship to downstream consumers of the library.
alloy = { version = "1.0", features = ["node-bindings"] }

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"

[[example]]
name = "persistence_example"
path = "examples/persistence_example.rs"