[package]
name = "artemis-light"
version = "0.1.0"
edition = "2024"
description = "A framework for reliable, long-running on-chain automation: event-driven agents built on Alloy and Tokio. A fork of Paradigm's Artemis."
license = "Apache-2.0"
repository = "https://github.com/AndreasKoestler/artemis-light"
readme = "README.md"
keywords = ["ethereum", "web3", "alloy", "bot", "indexer"]
categories = ["asynchronous", "cryptography::cryptocurrencies"]

[features]
## Opt-in, read-only HTTP serving layer over the persisted tables. Off by
## default so consumers who never serve pay no dependency cost (serving-layer.OPTIN.1/.2).
serving = ["dep:axum", "tokio/net"]

[dependencies]
## async
async-trait = "0.1"
futures = "0.3"
## The library itself needs only these; downstream binaries pick their own
## runtime flavour (`rt-multi-thread`, `signal`, ...).
tokio = { version = "1.44", features = ["rt", "sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ['sync'] }
tokio-util = "0.7"
alloy = { version = "1.0", features = ["full"] }
## persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
## serving (opt-in; compiled only under the `serving` feature).
## Pinned to 0.7: axum 0.8 requires serde_core >=1.0.221, which breaks
## alloy-consensus 1.0.8's use of `serde::__private` (the project pins serde 1.0.219).
axum = { version = "0.7", optional = true }
## misc
anyhow = "1.0.97"
tracing = "0.1.41"

[dev-dependencies]
## `test-util` enables `tokio::time::pause`/`start_paused` so the collector
## driver's backoff timing can be asserted on virtual time.
tokio = { version = "1.44", features = ["full", "test-util"] }
## `node-bindings` (Anvil process spawning) is test/example tooling only; it
## must not ship to downstream consumers of the library.
alloy = { version = "1.0", features = ["node-bindings"] }
## serving-layer integration tests: in-process router exercise + temp-file DBs.
axum = { version = "0.7" }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"

[[example]]
name = "combinators_example"
path = "examples/combinators_example.rs"

[[example]]
name = "adapters_example"
path = "examples/adapters_example.rs"

[[example]]
name = "observer_example"
path = "examples/observer_example.rs"

[[example]]
name = "reliability_example"
path = "examples/reliability_example.rs"

[[example]]
name = "liquidation_bot_example"
path = "examples/liquidation_bot_example.rs"

[[example]]
name = "reconnect_example"
path = "examples/reconnect_example.rs"

[[example]]
name = "persistence_example"
path = "examples/persistence_example.rs"

[[example]]
name = "confirmation_depth_example"
path = "examples/confirmation_depth_example.rs"

[[example]]
name = "onchain_example"
path = "examples/onchain_example.rs"

[[example]]
name = "feedback_example"
path = "examples/feedback_example.rs"